# monad-playground

./: .gitignore  README.md
maybe/haskell-maybe/: haskell-maybe.cabal
maybe/haskell-maybe/src/: Main.hs
maybe/js-maybe/: maybe.js  maybe2.js
maybe/maybe-kotlin/: build.gradle
maybe/maybe-kotlin/src/main/kotlin/com/prt2121/maybe/: maybe.kt
maybe/maybe-kotlin/src/test/kotlin/maybe/: maybeTest.kt
maybe/swift-optional/optional.playground/: Contents.swift
maybe/swift-optional/optional.playground/playground.xcworkspace/xcuserdata/pt2121.xcuserdatad/: UserInterfaceState.xcuserstate
mycat/: build.sbt
mycat/src/main/scala/: MyCat.scala  Parallel.scala
scalaz-01/: Truthy.scala
scalaz-01/haskellVersion/: haskellVersion.cabal  stack.yaml
scalaz-01/haskellVersion/src/: Meh.hs
state/haskell-state/: haskell-state.cabal
state/haskell-state/src/: Dice.hs  Main.hs  Stack.hs
state/randomScala/src/: RNG.sc  RNG.scala  SimpleRng.scala  State.scala  StateExercise.scala
strictness/: build.sbt
strictness/src/main/scala/: hi.scala
strictness/src/main/scala/stream/: hi.scala
